--- a/css/aula/seletores.html
+++ b/css/aula/seletores.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div>
+      <h1 id="cabecalho">Nome do site</h1>
       <p class="destaque">Lorem ipsum dolor sit amet, consectetur magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
         ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
         velit esse cillum dolore eu fugiat nulla pariatur.  Excepteur sint occaecat cupidatat non proident, sunt in
@@ -19,11 +20,31 @@
     </div>
 
     <p>Lorem ipsum <em>dolor sit amet, consectetur magna aliqua</em>. Ut enim ad minim veniam, quis nostrud exercitation
-    ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-    velit esse cillum dolore eu fugiat nulla pariatur.  Excepteur sint occaecat cupidatat non proident, sunt in
-    culpa qui officia deserunt mollit anim id est laborum</p>
+      ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+      velit esse cillum dolore eu fugiat nulla pariatur.  Excepteur sint occaecat cupidatat non proident, sunt in
+      culpa qui officia deserunt mollit anim id est laborum</p>
 
-  <h1 class="destaque">Meu <em>título</em> <strong>legal</strong></h1>
-  <h1>Meu <em>título</em></h1>
+    <h1 class="destaque">Meu <em>título</em> <strong>legal</strong></h1>
+    <h1>Meu <em>título</em></h1>
+
+    <ul class="elementos">
+      <li>
+        <a href="">Elemento 1</a>
+      </li>
+      <li>
+        <a href="">Elemento 2</a>
+      </li>
+      <li>
+        <a href="">Elemento 3</a>
+        <ul>
+          <li>
+            <a href="">Elemento 3.1</a>
+          </li>
+          <li>
+            <a href="">Elemento 3.2</a>
+          </li>
+        </ul>
+      </li>
+    </ul>
   </body>
 </html>
