--- a/css/aula/texto/index.html
+++ b/css/aula/texto/index.html
@@ -13,7 +13,7 @@
       ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
       velit esse cillum dolore eu fugiat nulla pariatur.  Excepteur sint occaecat cupidatat non proident, sunt in
       culpa qui officia deserunt mollit anim id est laborum</p>
-    <ul>
+    <ul id="lista">
       <li class="ingredientes"><a href="#">Cobertura</a>
         <ul>
           <li>
