Adicionando resolucão de exercicios e slides de JS

--- a/css/exercicios/revisao/index.html
+++ b/css/exercicios/revisao/index.html
@@ -6,9 +6,122 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link href="reset.css" rel="stylesheet" type="text/css" />
     <link href="style.css" rel="stylesheet" type="text/css" />
-
   </head>
   <body>
+    <div id="geral" class="clearfix">
+      <div id="cabecalho" class="clearfix">
+        <h1 class="logotipo replacement">Corporate Corp.</h1>
+        <ul class="navegacao">
+          <li>
+            <a href="#">Home</a>
+          </li>
+          <li>
+            <a href="#">Sobre</a>
+          </li>
+          <li>
+            <a href="#">Produtos</a>
+          </li>
+          <li>
+            <a href="#">Blog</a>
+          </li>
+          <li>
+            <a href="#">Links</a>
+          </li>
+          <li>
+            <a href="#">Suporte</a>
+          </li>
+          <li>
+            <a href="#">Palestras</a>
+          </li>
+          <li>
+            <a href="#">Workshops</a>
+          </li>
+          <li>
+            <a href="#">Contato</a>
+          </li>
+        </ul>
+      </div><!-- end #cabecalho -->
+
+      <div id="chamada">
+        <h2>Preocupando-se com o melhor</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+          ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+          velit esse cillum dolore eu fugiat nulla pariatur.  Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum</p>
+      </div><!-- end #chamada -->
+
+      <div id="conteudo">
+        <h3>Sua melhor escolha</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+          ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+          velit esse cillum dolore eu fugiat nulla pariatur.  Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum</p>
+
+        <h4>culpa qui officia</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+          ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+          velit esse cillum dolore eu fugiat nulla pariatur.  Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum</p>
+        <p>Lorem ipsum dolor sit amet, consectetur magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+          ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+          velit esse cillum dolore eu fugiat nulla pariatur.  Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum</p>
+      </div><!-- end #conteudo -->
+
+      <div id="acoes">
+        <form action="" id="busca">
+          <fieldset>
+            <legend>Busca</legend>
+            <label for="campo-busca">Buscar</label>
+            <input type="text" name="busca" id="campo-busca" />
+
+            <input type="submit" value="Buscar" />
+          </fieldset>
+        </form>
+
+        <hr/>
+
+        <h3>Links importantes</h3>
+        <ul>
+          <li>
+            <a href="#">Guia de desenvolvimento</a>
+          </li>
+          <li>
+            <a href="#">Tecnologia do futuro</a>
+          </li>
+          <li>
+            <a href="#">Agilidade no investimento</a>
+          </li>
+          <li>
+            <a href="#">Sempre ensinamos os melhores</a>
+          </li>
+          <li>
+            <a href="#">Viva as tabelas!</a>
+          </li>
+        </ul>
+
+        <hr/>
+
+        <form action="">
+          <fieldset>
+            <legend>Associados</legend>
+            <label for="campo-associados">Usuário</label>
+            <input type="text" name="usuario" id="campo-associados" />
+            <label for="campo-senha">Senha</label>
+            <input type="password" name="senha" id="campo-senha" />
+
+            <input type="submit" value="Entrar" />
+          </fieldset>
+        </form>
+      </div><!-- end #acoes -->
+    </div><!-- end #geral --> 
+    <div id="contato" class="clearfix">
+      <h3 class="replacement">Corporate Corp.</h3>
+      <address>
+        <span class="telefone">T. 567 3456</span>
+        <span class="endereco">Alameda das Gaivotas, 453, São Paulo</span>
+      </address>
+    </div><!-- end rodape -->
   </body>
 </html>
 
