Adicionando material de aula e exercicio de eventos

--- a/js/exercicios/eventos-efeitos/index.html
+++ b/js/exercicios/eventos-efeitos/index.html
@@ -11,6 +11,7 @@
     <a id="uma-vez" href="#">Esconder todos</a>
     <a id="uma-vez-efeito" href="#">Esconder com efeito</a>
     <a id="dobrar" href="#">Duplicar</a>
+    <a id="resetar" href="#">Voltar ao estado inicial</a>
     <hr/>
     <div id="primeiro"></div>
     <div id="segundo"></div>
